# revitpy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  RevitPy.sln  SECURITY.md  build.ps1  build.sh  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  compatibility-testing.yml  deploy-docs.yml  test-suite.yml
.sugar/: README.md  analysis-report-20251027.md  config.yaml  tasks.json
bridge/: __init__.py
bridge/communication/: __init__.py  file_exchange.py  pipe_server.py  (+2 more)
cli/: pyproject.toml
cli/src/revitpy_cli/: __init__.py  main.py
cli/src/revitpy_cli/commands/: __init__.py  build.py  create.py  dev.py  doctor.py  install.py  publish.py
cli/src/revitpy_cli/core/: __init__.py  config.py  exceptions.py  logging.py
cli/src/revitpy_cli/dev_server/: __init__.py  file_watcher.py  hot_reload.py  websocket_server.py
cli/src/revitpy_cli/plugins/: __init__.py  manager.py
cli/src/revitpy_cli/plugins/builtin/: __init__.py  example_plugin.py
cli/src/revitpy_cli/utils/: __init__.py  git.py  templates.py  validation.py
cli/templates/addin/: cookiecutter.json
cli/templates/addin/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug.replace('-', '_')}}/: application.py
cli/templates/basic-script/: cookiecutter.json
cli/templates/basic-script/{{cookiecutter.project_slug}}/: .gitignore  README.md  pyproject.toml
cli/templates/basic-script/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug.replace('-', '_')}}/: __init__.py  main.py
cli/templates/basic-script/{{cookiecutter.project_slug}}/tests/: test_main.py{% if cookiecutter.use_pytest == 'y' %}
dev-server/: README.md  package.json  tsconfig.json
docs/: Gemfile  README.md  _config.yml  documentation.md  examples.md  getting-started.md  index.html  index.md  mkdocs.yml  pyrevit-integration.md  requirements-docs.txt  robots.txt
examples/: README.md  orm_usage_examples.py
examples/basic-element-query/: README.md  pyproject.toml  requirements.txt
examples/basic-element-query/config/: settings.yaml
examples/basic-element-query/examples/: advanced_filtering.py  basic_usage.py  batch_processing.py
examples/basic-element-query/src/: __init__.py  element_query.py  filters.py  main.py  utils.py
examples/basic-element-query/tests/: __init__.py  test_element_query.py  test_filters.py
examples/room-data-exporter/: README.md  pyproject.toml  requirements.txt
examples/room-data-exporter/src/room_exporter/: __init__.py  exporter.py  formatters.py  models.py
examples/room-data-exporter/tests/: test_exporter.py
installer/: README.md  RevitPy.Installer.wixproj  build-installer.ps1
proof-of-concepts/: MARKET_VALIDATION_FRAMEWORK.md  MASTER_DOCUMENTATION.md  README.md  ROI_CALCULATOR.md  test_poc_functionality.py  validate_pocs.py
revitpy/: __init__.py  config.py
revitpy-package-manager/: .pre-commit-config.yaml  Dockerfile  Dockerfile.desktop  README.desktop.md  README.md  SECURITY.md  alembic.ini  docker-compose.desktop.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.desktop.txt
revitpy-package-manager/.sugar/: GETTING_STARTED.md  README.md  quick-status.sh  tasks.json
revitpy-package-manager/docs/: index.md
revitpy-package-manager/docs/api/: README.md
revitpy-package-manager/docs/getting-started/: first-extension.md  index.md  installation.md  quickstart.md
revitpy-package-manager/nginx/: nginx.conf
revitpy-package-manager/revitpy_package_manager/: __init__.py  config.py
revitpy-package-manager/revitpy_package_manager/builder/: __init__.py  rpyx_format.py  validator.py
revitpy-package-manager/revitpy_package_manager/builder/cli/: __init__.py  main.py
revitpy-package-manager/revitpy_package_manager/installer/: __init__.py  cache_manager.py  resolver.py  venv_manager.py
revitpy-package-manager/revitpy_package_manager/installer/cli/: __init__.py  desktop_cli.py  main.py
revitpy-package-manager/revitpy_package_manager/registry/: database.py  desktop_registry.py
revitpy-package-manager/revitpy_package_manager/registry/api/: __init__.py  main.py  schemas.py
revitpy-package-manager/revitpy_package_manager/registry/api/routers/: __init__.py  admin.py  auth.py  health.py  packages.py  users.py
revitpy-package-manager/revitpy_package_manager/registry/models/: __init__.py  base.py  download.py  package.py  security.py  user.py
revitpy-package-manager/revitpy_package_manager/registry/services/: __init__.py  cache.py  monitoring.py  storage.py
revitpy-package-manager/revitpy_package_manager/security/: __init__.py  certificate_manager.py  config.py  desktop_scanner.py  scanner.py  signing.py
revitpy-package-manager/scripts/: desktop_entrypoint.py  security_validation.py
revitpy-package-manager/security_artifacts/: security_checklist.md  security_validation_results.json
revitpy-package-manager/tests/: builder_conftest.py  conftest.py  run_admin_router_tests.py  run_auth_router_tests.py  run_cache_tests.py  run_certificate_tests.py  run_config_tests.py  run_database_tests.py  run_health_tests.py  run_health_tests_simple.py  run_models_tests.py  run_monitoring_tests.py  run_packages_router_tests.py  run_resolver_tests.py  run_scanner_tests.py  run_storage_tests.py  run_users_router_tests.py  test_admin_router.py  test_api_packages.py  test_auth_router.py  test_cache.py  test_certificate_manager.py  test_config.py  test_database.py  test_dependency_resolver.py  test_health.py  test_models.py  test_monitoring.py  test_packages_router.py  test_resolver.py  test_scanner.py  test_storage.py  test_users_router.py
revitpy-package-manager/tests/builder/: conftest.py  test_publisher.py
revitpy-package-manager/tests/installer/: conftest.py  test_installer.py  test_uninstaller.py
revitpy-package-manager/tests/registry/: conftest.py
revitpy-package-manager/tests/security/: test_auth_security.py  test_security_config.py
scripts/: test_maintenance.py
templates/: README.md
tests/: README.md  conftest.py
vscode-extension/: .gitignore  CHANGELOG.md  README.md  language-configuration.json  package.json  tsconfig.json
(+445 files in other folders)
